MMA-6970: Ikke utfør PDF/A validering på store filer (#455)
* MMA-6970: Ikke utfør PDF/A vaøidering på store filer